fix carousel imgs distortion  on smartphone

--- a/css/style.css
+++ b/css/style.css
@@ -118,16 +118,15 @@ hr {
   margin-bottom: 20px;
 }
 */
-/* HEADER CAROUSEL
--------------------------------------------------- */
 
+/* --------------------------------------
+  CAROUSEL
+-------------------------------------- */
 /* Carousel base class */
 .carousel {
-  height: 500px; /* testing change to min-height*/
- /* min-height: 500px;*/ /* testing change to min-height*/
-  /* remove margin bottom since added margin-top to mission */
-  /*margin-bottom: 60px;*/
+  height: 500px; 
 }
+
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
@@ -135,41 +134,18 @@ hr {
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 500px; /* testing change to min-height*/
-  /*min-height: 500px;*/ /* testing change to min-height*/
- /* background-color: #777;*/
-
+  height: 500px; 
 }
 
-.carousel-inner > .item > img:not(.first-slide) {
-  position: absolute; 
+.carousel-inner > .item > img {
+  position: absolute;
   top: 0;
-  left: 0;
   min-width: 100%;
+  min-height: auto;
+}
+.carousel-inner > .item > img.second-slide, .carousel-inner > .item > img.third-slide {
   height: 500px;
 }
-
-.carousel-inner > .item > img.first-slide {  
-  position: absolute; 
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  /*min-height: 500px;*/ /* testing change to min-height*/
-  min-height: auto; /* testing change to min-height*/
-}
-
-.carousel-inner > .item > img.second-slide {  
-  position: absolute; 
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  /*min-height: 500px;*/ /* testing change to min-height*/
-  min-height: auto; /* testing change to min-height*/
-}
-
-
-
-/* --------------------------- */
 
 /* add shadow to carousel & paradigm def text */
 .carousel h1, .carousel h3, .paradigm-def h2 {
@@ -767,11 +743,45 @@ margin-bottom: 0;
 }
 /******* End of Navbar ****** */
 
+/******* Carousel ****** */
 @media (max-width: 1023px) {
   .carousel-inner > .item > img.first-slide {
-    min-height: 500px;
+    height: 500px;
   }
 }
+
+@media (min-width: 768px) {
+  /* Bump up size of carousel content*/ 
+  .carousel-caption p {
+    margin-bottom: 20px;
+    font-size: 21px;
+    line-height: 1.4;
+  }
+}
+
+@media (max-width: 480px) {
+  .carousel {
+    height: 400px;
+  }
+  .carousel .item {
+    height: 400px;
+  }
+  .carousel-inner > .item > img {
+    height: 400px;
+  }
+  /*.carousel-inner > .item > img:not(.third-slide), .img-responsive:not(.third-slide) {
+    max-width: none !important;
+  } */
+  .carousel-inner > .item > img:not(.third-slide), .first-slide.img-responsive, .second-slide.img-responsive {
+    max-width: none !important;
+  } 
+}
+@media (max-width: 320px) {
+  .carousel-inner > .item > img.first-slide {
+    height: 400px;
+  }
+}
+/******* End of Carousel ****** */
 
 @media (min-width: 769px) and (max-width: 1024px) {
   .office-angled {
@@ -808,11 +818,11 @@ margin-bottom: 0;
 
 @media (min-width: 768px) {
   /* Bump up size of carousel content*/ 
-  .carousel-caption p {
+/*  .carousel-caption p {
     margin-bottom: 20px;
     font-size: 21px;
     line-height: 1.4;
-  }
+  }*/
 
   #forms .container-fluid {
     max-height: 470px;
